@@ -30,6 +30,8 @@ module Fairy
 ##CONF.DEFAULT_EXTERNAL = nil
 ##CONF.DEFAULT_INTERNAL = nil
 
+##CONF.MASTER_MAX_ACTIVE_PROCESSORS = 4
+
 ##CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
 
 ##  CONF.POSTMAPPING_POLICY = nil
