@@ -65,6 +65,8 @@ module Fairy
     def_prop :DEFAULT_EXTERNAL
     def_prop :DEFAULT_INTERNAL
 
+    def_prop :MASTER_MAX_ACTIVE_PROCESSORS
+
     def_prop :CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR
 
     def_prop :PREQUEUING_POLICY
@@ -196,6 +198,8 @@ module Fairy
 
   CONF.DEFAULT_EXTERNAL = nil
   CONF.DEFAULT_INTERNAL = nil
+
+  CONF.MASTER_MAX_ACTIVE_PROCESSORS = 4
 
   CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
 
